wallet creation and printing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: satsails_wallet
-description: "The coolest bitcoin wallet"
+description: "Sail your wealth to the clouds!"
 publish_to: 'none'
 version: 1.0.0+1
 
