--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   pin_code_fields: ^8.0.1
   local_auth: ^2.1.8
+  animate_gradient: ^0.0.2+1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
