--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   animate_gradient: ^0.0.2+1
   web_socket_channel: ^2.4.0
   http: ^1.2.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
