--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.2.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  webview_flutter: ^4.5.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
