--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   webview_flutter: ^4.5.0
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
