--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.2.2
   webview_flutter: ^4.5.0
   qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
