simple sending with max feess

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   webview_flutter: ^4.5.0
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
+  btc_address_validate_swan: ^1.2.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
