--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+    <key>NSFaceIDUsageDescription</key>
+    <string>Why is my app authenticating using face id?</string>
     <key>NSCameraUsageDescription</key>
     <string>This app needs camera access to scan QR codes</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
