--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,7 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  pod 'RxSwift', '6.2.0'
   target 'RunnerTests' do
     inherit! :search_paths
   end
