working only aqua

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,7 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   pod 'RxSwift', '6.2.0'
+
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -42,4 +43,24 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
   end
+end
+
+post_integrate do |installer|
+  compiler_flags_key = 'COMPILER_FLAGS'
+  project_path = 'Pods/Pods.xcodeproj'
+
+  project = Xcodeproj::Project.open(project_path)
+  project.targets.each do |target|
+    target.build_phases.each do |build_phase|
+      if build_phase.is_a?(Xcodeproj::Project::Object::PBXSourcesBuildPhase)
+        build_phase.files.each do |file|
+          if !file.settings.nil? && file.settings.key?(compiler_flags_key)
+            compiler_flags = file.settings[compiler_flags_key]
+            file.settings[compiler_flags_key] = compiler_flags.gsub(/-DOS_OBJECT_USE_OBJC=0\s*/, '')
+          end
+        end
+      end
+    end
+  end
+  project.save()
 end
