--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   riverpod: ^2.5.1
   bdk_flutter: ^0.30.0
   breez_sdk: ^0.3.8
+  flutter_i18n: ^0.35.1
   boltz_dart:
     git:
       url: https://github.com/SatoshiPortal/boltz-dart.git
