--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   local_auth: ^2.1.8
   animate_gradient: ^0.0.2+1
   web_socket_channel: ^2.4.0
-  http: ^1.2.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   webview_flutter: ^4.5.0
@@ -38,6 +37,7 @@ dependencies:
     git:
       url: https://github.com/SatoshiPortal/lwk-dart
       ref: trunk
+  forex_currency_conversion: ^0.9.1
 
 
 
