--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   fl_chart: ^0.66.2
   month_picker_dialog: ^2.11.0
 #  new
+#  for responsive design (implement)
   responsive_framework: ^1.4.0
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
   bdk_flutter: ^0.30.0
   breez_sdk: ^0.3.8
+#  for translations (implement)
   flutter_i18n: ^0.35.1
   boltz_dart:
     git:
@@ -38,8 +40,13 @@ dependencies:
       url: https://github.com/SatoshiPortal/lwk-dart
       ref: trunk
   forex_currency_conversion: ^0.9.1
-
-
+#  implement (implement)
+  icons_plus: ^5.0.0
+#  for balances (implement)
+  flutter_card_swiper: ^7.0.0
+  flip_card: ^0.7.0
+  card_loading: ^0.3.2
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
