--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   http: ^1.2.1
   local_auth: ^2.1.8
   web_socket_channel: ^2.4.0
-  shared_preferences: ^2.2.2
+  hive: ^2.2.3
   webview_flutter: ^4.5.0
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
