--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,6 @@ dependencies:
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
   bdk_flutter: ^0.30.0
-#  for translations (implement)
   flutter_i18n: ^0.35.1
   boltz_dart:
     git:
@@ -38,6 +37,7 @@ dependencies:
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
   loading_animation_widget: ^1.2.1
+  group_button: ^5.3.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
