--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   icons_plus: ^5.0.0
   loading_animation_widget: ^1.2.1
   group_button: ^5.3.4
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
