--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   loading_animation_widget: ^1.2.1
   group_button: ^5.3.4
   pull_to_refresh: ^2.0.0
+  responsive_framework: ^1.4.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
