--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   group_button: ^5.3.4
   pull_to_refresh: ^2.0.0
   responsive_framework: ^1.4.0
+  liquid_pull_to_refresh: ^3.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
