--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   responsive_framework: ^1.4.0
   liquid_pull_to_refresh: ^3.0.1
+  bolt11_decoder: ^1.0.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
