--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   hooks_riverpod: ^2.5.1
   interactive_slider: ^0.2.1
   currency_text_input_formatter: ^2.2.1
+  fluttertoast: ^8.2.5
+  msh_checkbox: ^2.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
