--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   interactive_slider: ^0.2.1
   currency_text_input_formatter: ^2.2.1
   fluttertoast: ^8.2.5
-  msh_checkbox: ^2.0.1
+  flutter_card_swiper: ^7.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
