--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   month_picker_dialog: ^2.11.0
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
-  bdk_flutter: ^0.30.0
+  bdk_flutter: ^0.31.1-dev
   flutter_i18n: ^0.35.1
   boltz_dart:
     git:
