--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
   bdk_flutter: ^0.31.1-dev
+#  bdk_flutter:
+#    git:
+#      url: 'https://github.com/LtbLightning/bdk-flutter'
+#      ref: pre-compiled-binaries
   flutter_i18n: ^0.35.1
   boltz_dart:
     git:
