--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   syncfusion_flutter_charts: ^25.1.41+2
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   dependency_validator: ^3.0.0
   flutter_test:
