--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   pin_code_fields: ^8.0.1
   http: ^1.2.1
   local_auth: ^2.1.8
-  web_socket_channel: ^2.4.0
   hive: ^2.2.3
   webview_flutter: ^4.5.0
   qr_flutter: ^4.1.0
@@ -49,7 +48,7 @@ dependencies:
 #  flutter_styled_toast: ^2.2.1 use to compil toas everywhere
   flutter_card_swiper: ^7.0.0
   calendar_date_picker2: ^0.5.6
-  syncfusion_flutter_charts: ^25.1.41+2
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   build_runner: ^2.4.9
@@ -68,3 +67,9 @@ flutter:
 flutter_launcher_icons:
   android: true
   image_path: "lib/assets/satsails.png"
+flutter_native_splash:
+    color: "#FFFFFF"
+    image: "lib/assets/satsails.png"
+    android: true
+    ios: true
+    web: true
