--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_card_swiper: ^7.0.0
   calendar_date_picker2: ^0.5.6
   flutter_native_splash: ^2.4.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   build_runner: ^2.4.9
