add model to sideswap

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
       ref: trunk
   lwk_dart:
     git:
-      url: https://github.com/SatoshiPortal/lwk-dart
-      ref: trunk
+      url: https://github.com/JoaoLobo94/lwk-dart
+      ref: fix-pset-details
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
   loading_animation_widget: ^1.2.1
