--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   url_launcher: ^6.2.6
   i18n_extension: ^12.0.1
 
+  path_provider: any
+  flutter_hooks: any
+  decimal: any
+  web_socket_channel: any
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
