--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Satsails
 description: "Sail your wealth to the cloud!"
 publish_to: 'none'
-version: 1.0.0+1
+version: 0.2.0
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
