--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
 #  need windows linux ios and mac and web compils
   boltz_dart:
     git:
-      url: https://github.com/SatoshiPortal/boltz-dart.git
-      ref: trunk
+      url: https://github.com/JoaoLobo94/satsails-boltz-dart
+      ref: fix-referral-id
   lwk_dart:
     git:
       url: https://github.com/SatoshiPortal/lwk-dart.git
@@ -54,7 +54,6 @@ dependencies:
   url_launcher: ^6.2.6
   i18n_extension: ^12.0.1
   google_fonts: ^6.2.1
-
   path_provider: any
   flutter_hooks: any
   decimal: any
