--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Satsails
 description: "Sail your wealth to the cloud!"
 publish_to: 'none'
-version: 0.2.0+3
+version: 0.2.1
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -58,6 +58,7 @@ dependencies:
   flutter_hooks: any
   decimal: any
   web_socket_channel: any
+
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
@@ -70,6 +71,7 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/satsails.png
+    - lib/assets/s.png
 
 #compil incons to all envs
 flutter_launcher_icons:
