--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,14 +72,15 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/logo.png
+    - lib/assets/app_icon.png
 
 #compil incons to all envs
 flutter_launcher_icons:
   android: true
-  image_path: "lib/assets/logo.png"
+  image_path: "lib/assets/app_icon.png"
 flutter_native_splash:
     color: "#FFFFFF"
-    image: "lib/assets/logo.png"
+    image: "lib/assets/app_icon.png"
     android: true
     ios: true
     web: true
