--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Satsails
 description: "Sail your wealth to the cloud!"
 publish_to: 'none'
-version: 0.2.1+6
+version: 0.2.2+6
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -58,6 +58,7 @@ dependencies:
   decimal: any
   web_socket_channel: any
   permission_handler: ^9.0.1
+  go_router: ^14.1.4
 
 dev_dependencies:
   build_runner: ^2.4.9
