--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   web_socket_channel: any
   permission_handler: ^9.0.1
   go_router: ^14.1.4
+  segmented_button_slide: ^1.0.4
 
 dev_dependencies:
   build_runner: ^2.4.9
