--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   permission_handler: ^9.0.1
   go_router: ^14.1.4
   segmented_button_slide: ^1.0.4
+  syncfusion_flutter_charts: ^25.2.6
 
 dev_dependencies:
   build_runner: ^2.4.9
