--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   syncfusion_flutter_charts: ^25.2.6
   flutter_keyboard_visibility: ^5.0.0
 
+  intl: any
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
