--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ dependencies:
   go_router: ^14.1.4
   segmented_button_slide: ^1.0.4
   syncfusion_flutter_charts: ^25.2.6
-  flutter_keyboard_visibility: ^5.0.0
   random_string: ^2.3.1
+  introduction_screen: ^3.1.14
 
   intl: any
 dev_dependencies:
