--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
       ref: master
 
   intl: any
+  pusher_channels_flutter: ^2.2.1
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
