--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,7 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "lib/assets/app_icon.png"
+  image_path: "lib/assets/satsails.png"
   adaptive_icon_background: "#000000"
 
 flutter_native_splash:
