--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/app_icon.png
+    - lib/assets/satsails.png
     - lib/assets/depix.png
     - lib/assets/eurx.png
     - lib/assets/l-btc.png
