--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   flutter_native_splash: ^2.4.0
   url_launcher: ^6.2.6
   i18n_extension: ^12.0.1
-  google_fonts: ^6.2.1
   path_provider: any
   flutter_hooks: any
   decimal: any
@@ -70,6 +69,7 @@ dependencies:
       ref: master
   intl: any
   pusher_channels_flutter: ^2.2.1
+  coingecko_api: ^2.0.1
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
