--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   intl: any
   pusher_channels_flutter: ^2.2.1
   coingecko_api: ^2.0.1
+  flutter_image_slideshow: ^0.1.6
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
@@ -87,6 +88,7 @@ flutter:
   assets:
     - lib/assets/app_icon.png
     - lib/assets/satsails.png
+    - lib/assets/GraficoAnalise.svg
     - lib/assets/satsails.svg
     - lib/assets/depix.png
     - lib/assets/eurx.png
