--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   segmented_button_slide: ^1.0.4
   syncfusion_flutter_charts: ^25.2.6
   random_string: ^2.3.1
+  share_plus: ^10.0.2
   introduction_screen: ^3.1.14
   flutter_svg: ^2.0.10+1
   pix_flutter:
