--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSFaceIDUsageDescription</key>
+    <string>We need to use face id for easier app unlock</string>
 	<key>CFBundleDisplayName</key>
 	<string>Satsails</string>
 	<key>CFBundleExecutable</key>
