--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,6 +7,12 @@
 			<string>sms</string>
 			<string>tel</string>
 		</array>
+		<key>NSCameraUsageDescription</key>
+        <string>Access to send live photos to our support</string>
+        <key>NSPhotoLibraryAddUsageDescription</key>
+        <string>Access to send photos to our support</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>Access to send audio messages to our support</string>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
