--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   pusher_channels_flutter: ^2.2.1
   coingecko_api: ^2.0.1
   flutter_image_slideshow: ^0.1.6
+  crisp_chat: ^2.0.4
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
