--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   permission_handler: ^9.0.1
   go_router: ^14.1.4
   segmented_button_slide: ^1.0.4
-  syncfusion_flutter_charts: ^25.2.6
+  syncfusion_flutter_charts: ^26.2.14
   random_string: ^2.3.1
   share_plus: ^10.0.2
   introduction_screen: ^3.1.14
@@ -74,6 +74,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   crisp_chat: ^2.0.4
   currency_formatter: ^2.2.1
+  keyboard_dismisser: ^3.0.0
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
