--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   crisp_chat: ^2.0.4
   currency_formatter: ^2.2.1
-  keyboard_dismisser: ^3.0.0
+  keyboard_actions: ^4.2.0
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
