--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,15 +59,12 @@ dependencies:
   permission_handler: ^9.0.1
   go_router: ^14.1.4
   segmented_button_slide: ^1.0.4
-  syncfusion_flutter_charts: ^25.2.6
+  syncfusion_flutter_charts: ^27.1.48
   random_string: ^2.3.1
   share_plus: ^10.0.2
   introduction_screen: ^3.1.14
   flutter_svg: ^2.0.10+1
-  pix_flutter:
-    git:
-      url: https://github.com/JoaoLobo94/pix_flutter
-      ref: master
+  cpf_cnpj_validator: ^2.0.0
   intl: any
   pusher_channels_flutter: ^2.2.1
   coingecko_api: ^2.0.1
