--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -82,4 +83,9 @@ flutter {
 
 dependencies {
     implementation 'com.android.support:multidex:2.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
+    implementation 'com.pusher:push-notifications-android:${ANDROID_SDK_VERSION}'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
