--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,12 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   crisp_chat: ^2.0.4
   currency_formatter: ^2.2.1
+  flutter_local_notifications: ^17.2.3
+  pusher_beams:
+    git:
+      url: https://github.com/sokhorninit/push-notifications-flutter
+      path: packages/pusher_beams
+      ref: master
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
