--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -26,6 +26,11 @@ jobs:
           echo "$GOOGLE_SERVICES_JSON" > $GITHUB_WORKSPACE/android/app/google-services.json
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      - name: Create key.properties
+        run: |
+          echo "$KEY_PROPERTIES_FILE" > $GITHUB_WORKSPACE/android/key.properties
+        env:
+          KEY_PROPERTIES_FILE: ${{ secrets.KEY_PROPERTIES_FILE }}
 
       - name: Install dependencies
         run: flutter pub get
