--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -18,9 +18,7 @@ jobs:
       - name: Install FVM
         if: env.RUN_PIPELINE == 'true'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y unzip
-          curl -o- https://raw.githubusercontent.com/leoafarias/fvm/master/install.sh | bash
+          curl -fsSL https://fvm.app/install.sh | bash
           export PATH="$PATH:$HOME/.fvm/bin"
 
       - name: Install Flutter with FVM
