--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
     implementation 'com.pusher:push-notifications-android:${ANDROID_SDK_VERSION}'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
