--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,8 +74,7 @@ dependencies:
       url: https://github.com/sokhorninit/push-notifications-flutter
       path: packages/pusher_beams
       ref: master
-  keyboard_actions: ^4.2.0
-  keyboard_dismisser: ^3.0.0
+  flutter_keyboard_done: ^1.0.1
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
