--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,7 +14,7 @@
 		<key>NSCameraUsageDescription</key>
 		<string>Access to send live photos to our support</string>
 		<key>NSPhotoLibraryAddUsageDescription</key>
-		<string>Access to send photos to our support</string>
+		<string>Access to send photos to our support and scan qr codes</string>
 		<key>NSMicrophoneUsageDescription</key>
 		<string>Access to send audio messages to our support</string>
 		<key>CFBundleDevelopmentRegion</key>
