--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -9,14 +9,27 @@
 		</array>
 		<key>io.flutter.embedded_views_preview</key>
 		<true/>
+
+		<!-- Permissions for Face ID, Camera, Photo Library, and Microphone -->
 		<key>NSFaceIDUsageDescription</key>
-		<string>Allow face id to unlock satsails</string>
+		<string>Allow face ID to unlock Satsails</string>
 		<key>NSCameraUsageDescription</key>
 		<string>Access to send live photos to our support</string>
 		<key>NSPhotoLibraryAddUsageDescription</key>
-		<string>Access to send photos to our support and scan qr codes</string>
+		<string>Access to send photos to our support and scan QR codes</string>
 		<key>NSMicrophoneUsageDescription</key>
 		<string>Access to send audio messages to our support</string>
+
+		<!-- Notification Permissions -->
+		<key>NSUserTrackingUsageDescription</key>
+		<string>This identifier will be used to deliver personalized ads to you.</string>
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>fetch</string>
+			<string>remote-notification</string>
+		</array>
+
+		<!-- Basic App Configurations -->
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
@@ -43,6 +56,8 @@
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
 		<string>Main</string>
+
+		<!-- Supported Orientations -->
 		<key>UISupportedInterfaceOrientations</key>
 		<array>
 			<string>UIInterfaceOrientationPortrait</string>
@@ -56,6 +71,8 @@
 			<string>UIInterfaceOrientationLandscapeLeft</string>
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
+
+		<!-- Additional Configurations -->
 		<key>CADisableMinimumFrameDurationOnPhone</key>
 		<true/>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
