--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
       path: packages/pusher_beams
       ref: master
   flutter_keyboard_done: ^1.0.1
+  in_app_notification: ^1.1.2
 dev_dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
