--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   flutter_keyboard_done: ^1.0.1
 dev_dependencies:
   build_runner: ^2.4.9
+  flutter_dotenv: ^5.1.0
   hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   dependency_validator: ^3.0.0
@@ -104,6 +105,7 @@ flutter:
     - lib/assets/l-btc.png
     - lib/assets/tether.png
     - lib/assets/bip39_english.txt
+    - .env
 
 #compil incons to all envs
 flutter_launcher_icons:
