--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   crisp_chat: ^2.0.4
   currency_formatter: ^2.2.1
   flutter_local_notifications: ^17.2.3
+  pusher_channels_flutter: ^2.2.1
   pusher_beams:
     git:
       url: https://github.com/sokhorninit/push-notifications-flutter
