--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^9.0.0
+  go_router: ^14.3.0
   pin_code_fields: ^8.0.1
   http: ^1.2.1
   local_auth: ^2.1.8
@@ -49,19 +50,18 @@ dependencies:
   flutter_native_splash: ^2.4.0
   url_launcher: ^6.2.6
   i18n_extension: ^12.0.1
-  path_provider: any
-  flutter_hooks: any
-  decimal: any
-  web_socket_channel: any
+  path_provider: ^2.1.4
+  flutter_hooks: ^0.20.5
+  decimal: ^3.0.2
+  web_socket_channel: ^2.1.0
   permission_handler: ^9.0.1
-  go_router: ^14.1.4
   segmented_button_slide: ^1.0.4
   syncfusion_flutter_charts: ^27.1.48
   share_plus: ^10.0.2
   introduction_screen: ^3.1.14
   flutter_svg: ^2.0.10+1
   cpf_cnpj_validator: ^2.0.0
-  intl: any
+  intl: ^0.19.0
   coingecko_api: ^2.0.1
   flutter_image_slideshow: ^0.1.6
   crisp_chat: ^2.0.4
