--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   local_auth: ^2.1.8
   hive: ^2.2.3
   webview_flutter: ^4.5.0
+  webview_flutter_platform_interface: ^2.1.3
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
 #  ai_barcode_scanner 3.4.3 for web compil
@@ -82,6 +83,7 @@ dev_dependencies:
   dependency_validator: ^3.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.17  
   flutter_lints: ^3.0.1
 flutter:
   fonts:
