--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Satsails
 description: "Sail your wealth to the cloud!"
 publish_to: 'none'
-version: 1.0.0+28
+version: 1.1.0+29
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -65,7 +65,8 @@ dependencies:
   crisp_chat: ^2.0.4
   currency_formatter: ^2.2.1
   flutter_local_notifications: ^17.2.3
-  pusher_channels_flutter: ^2.2.1
+#  incompatible with latest flutter version, commenting for now, will be redundant once eulen releases api
+#  pusher_channels_flutter: ^2.2.1
   list_english_words: ^0.2.0
   bech32: ^0.2.2
   pusher_beams:
