--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Satsails
 description: "Sail your wealth to the cloud!"
 publish_to: 'none'
-version: 1.1.0+50
+version: 1.1.1+51
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -68,6 +68,7 @@ dependencies:
 #  incompatible with latest flutter version, commenting for now, will be redundant once eulen releases api
 #  pusher_channels_flutter: ^2.2.1
   faker: ^2.2.0
+  conduit_password_hash: ^5.1.3
   bech32: ^0.2.2
   pusher_beams:
     git:
